--- a/RMarkdown_Initial_Mysis_GAM.Rmd
+++ b/RMarkdown_Initial_Mysis_GAM.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
 library(rmarkdown)
 library(mgcv)
+
 ```
 **1. Load mgcv package `library(mgcv)`** <br>
 **2. Read GLNPO csv (for this test, I have already filtered to just Lake Michigan Data).Take a look at the column names.**
@@ -56,5 +57,16 @@ plot(DensGAM, bg="red", col="#336666", xlab = "Year", ylab = "Average Density", 
 <br>
 
 I added x and y labels, a title, and a color. I want to add more soon
+
+**7. Run your GAM with x(Yr) and y(Bmss) and view the summary information for the plot:**
+```{r}
+BmssGAM <- gam(Bmss ~ s(Yr))
+summary(BmssGAM)
+```
+<br>
+**8. Plot biomass GAM `plot(BmssGAM)`:**
+```{r, echo=FALSE}
+plot(BmssGAM)
+```
 
 
